# ArtiManager

Develop-src/SourceCode/: .gitignore  README.md  pyproject.toml
Develop-src/SourceCode/data/: config.example.toml  paper-note-template.md
Develop-src/SourceCode/docs/: user-guide.md
Develop-src/SourceCode/notes/: 408505a7-31be-4c39-8a7f-812cc3be08b8.md
Develop-src/SourceCode/src/artimanager/: __init__.py  config.py
Develop-src/SourceCode/tests/: conftest.py  test_config.py  test_db.py  test_release_packaging.py
Develop-src/SourceCode/tests/test_agent/: test_claude_provider.py  test_factory.py  test_local_provider.py  test_mock_provider.py  test_openai_provider.py
Develop-src/SourceCode/tests/test_analysis/: __init__.py  test_cli.py  test_manager.py  test_suggest.py
Develop-src/SourceCode/tests/test_discovery/: __init__.py  test_arxiv_api.py  test_cli.py  test_deepxiv_api.py  test_engine.py  test_models.py  test_openalex_api.py  test_provenance.py  test_semantic_scholar.py
Develop-src/SourceCode/tests/test_notes/: test_manager.py
Develop-src/SourceCode/tests/test_papers/: __init__.py  test_cli.py  test_manager.py
Develop-src/SourceCode/tests/test_relationships/: test_manager.py  test_suggest.py
Develop-src/SourceCode/tests/test_scanner/: __init__.py  test_cli.py  test_dedup.py  test_extract.py  test_intake.py  test_scan.py
Develop-src/SourceCode/tests/test_search/: __init__.py  test_indexer.py  test_query.py
Develop-src/SourceCode/tests/test_tags/: test_cli.py  test_manager.py
Develop-src/SourceCode/tests/test_tracking/: __init__.py  test_cli.py  (+3 more)
(+89 files in other folders)
